--- a/PhantasmaMail/PhantasmaMail/Views/DashboardView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/DashboardView.xaml
@@ -1,15 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="PhantasmaMail.Views.MenuView"
+    x:Class="PhantasmaMail.Views.DashboardView"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title=" ">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <ContentPage.Content>
         <StackLayout>
             <Label
                 HorizontalOptions="CenterAndExpand"
-                Text="This is the menu"
-                TextColor="White"
+                Text="This is the dashboard"
                 VerticalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
