--- a/PhantasmaMail/PhantasmaMail/Views/MainView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/MainView.xaml
@@ -3,13 +3,13 @@
     x:Class="PhantasmaMail.Views.MainView"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:views="clr-namespace:PhantasmaMail.Views"
+    xmlns:views="clr-namespace:PhantasmaMail.Views;assembly=PhantasmaMail"
     Title="Phantasma Mail"
     MasterBehavior="Popover">
     <MasterDetailPage.Master>
         <views:MenuView BindingContext="{Binding MenuViewModel}" />
     </MasterDetailPage.Master>
     <MasterDetailPage.Detail>
-        <ContentPage BackgroundColor="Transparent" />
+        <ContentPage BackgroundColor="Red" />
     </MasterDetailPage.Detail>
 </MasterDetailPage>
