--- a/PhantasmaMail/PhantasmaMail/Views/DashboardView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/DashboardView.xaml
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
+<views:BaseContentPage
     x:Class="PhantasmaMail.Views.DashboardView"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:views="clr-namespace:PhantasmaMail.Views;assembly=PhantasmaMail">
     <ContentPage.Content>
         <StackLayout>
             <Label
                 HorizontalOptions="CenterAndExpand"
                 Text="This is the dashboard"
+                TextColor="White"
                 VerticalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
-</ContentPage>
+</views:BaseContentPage>
